--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ consensus/genesis.ssz
 consensus/validatordata
 execution/geth
 execution/geth.ipc
+
+
+column clarify under dad raccoon old chicken century sweet inquiry model gain hurry tenant fantasy settle fresh twenty ripple tiger air lottery fine system
