--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@ execution/geth
 execution/geth.ipc
 
 
-column clarify under dad raccoon old chicken century sweet inquiry model gain hurry tenant fantasy settle fresh twenty ripple tiger air lottery fine system
+# column clarify under dad raccoon old chicken century sweet inquiry model gain hurry tenant fantasy settle fresh twenty ripple tiger air lottery fine system
